Continuing to sort out HTML layout; need to fix some alignment

--- a/dojo_survey_1_app/static/css/style.css
+++ b/dojo_survey_1_app/static/css/style.css
@@ -16,7 +16,41 @@
     margin: 10px;
     padding: 20px 20px 20px 20px;
     display: flex;
+    align-items: center;
     flex-direction: column;
     border: 1px solid black;
-    background-color: red;
+    background-color: wheat;
+}
+
+#menu-upper-half {
+    width: 650px;
+    min-height: 150px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#menu-lower-half {
+    width: 650px;
+    min-height: 150px;
+    display: block;
+}
+
+#menu-left {
+    width: 350px;
+    min-height: 150px;
+    display: flex;
+    flex-direction: column;
+}
+
+#menu-right {
+    width: 350px;
+    min-height: 150px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-control {
+    height: 100px;
+    text-align:left;
 }
